# mpi-abi-stubs

./: .codespellrc  .gitignore  .ruff.toml  .vermin  .yamllint.yml  CMakeLists.txt  LICENSE.md  Makefile  README.md  build-cmake.sh  build-meson.sh  check.sh  clean.sh  fix-dylib-id.sh  meson.build  meson.options  meson_options.txt  mpi-api-removed.h  mpi.h  mpicc.in  mpilib.c  mpilib.def  mpistubs.c  pyproject.toml  tox.toml  update.py
.github/workflows/: ci.yml  mpi4py.yml
test/: CMakeLists.txt  Makefile  meson.build  meson.options  mpi-version.c  test-cmake.sh  test-meson.sh
