option(
  'source_h', type: 'string', value: 'mpi.h',
  description: 'MPI ABI implementation header'
)
option(
  'source_c', type: 'string', value: 'mpilib.c',
  description: 'MPI ABI implementation source'
)
option(
  'relocatable', type: 'boolean', value: false,
  description: 'Relocatable install'
)
