[project]
name = "mpi-abi-stubs"
dynamic = ["version"]
description = "MPI ABI stubs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
  {name = "Lisandro Dalcin", email = "dalcinl@gmail.com"},
  {name = "Jeff Hammond", email = "jeff.science@gmail.com"},
]
keywords = [
  "scientific computing",
  "parallel computing",
  "message passing interface",
  "MPI",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/mutationpp/mpi-abi-stubs"
Source = "https://github.com/mutationpp/mpi-abi-stubs.git"
Issues = "https://github.com/mutationpp/mpi-abi-stubs/issues"
Discussions = "https://github.com/mutationpp/mpi-abi-stubs/discussions"
Downloads = "https://github.com/mutationpp/mpi-abi-stubs/releases"

[build-system]
requires = ["scikit-build-core >= 1.0"]
build-backend = "scikit_build_core.build"

[dependency-groups]
lint = [
  "codespell",
  "ruff",
  "shellcheck-py",
  "ty",
  "vermin",
  "yamllint",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
experimental = true
cmake.version = ">=3.15"
cmake.build-type = "MinSizeRel"
cmake.define.RELOCATABLE = "true"
cmake.define.CMAKE_INSTALL_LIBDIR = "lib"
sdist.cmake = false
sdist.exclude = [".*", "build", "dist"]
wheel.install-dir = "${SKBUILD_DATA_DIR}"
wheel.packages = []
wheel.py-api = "py3"

[[tool.scikit-build.overrides]]
if.platform-system = "darwin"
inherit.cmake.define = "append"
cmake.define.CMAKE_OSX_DEPLOYMENT_TARGET = "11.0"

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
wheel.install-dir = "${SKBUILD_DATA_DIR}/Library"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "(?P<version>[0-9.]+)"
result = "{version}"
